Fix video AOI align

--- a/src/Play/components/css/Image.css
+++ b/src/Play/components/css/Image.css
@@ -9,6 +9,33 @@
   width: 100%;
 }
 
+.videoContainer {
+  position: relative;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%; 
+  overflow: hidden;
+}
+
+.video-container video {
+  /* Make video to at least 100% wide and tall */
+  min-width: 100%; 
+  min-height: 100%; 
+
+  /* Setting width & height to auto prevents the browser from stretching or squishing the video */
+  width: auto;
+  height: auto;
+
+  /* Center the video */
+  position: relative;
+  align-self: center;
+  justify-content: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+
 .imageCanvas {
   position: relative;
   display: block;
@@ -43,4 +70,9 @@
 .fullScreenImage {
   height: 100vh;
   width: 100%;
+}
+
+.fullScreenVideo {
+  min-height: 100%;
+  min-width: 100%;
 }
